--- a/build.gradle
+++ b/build.gradle
@@ -5,29 +5,32 @@
  * For more details take a look at the Java Quickstart chapter in the Gradle
  * user guide available at https://docs.gradle.org/4.5/userguide/tutorial_java_projects.html
  */
+defaultTasks 'jar'
 
-plugins {
-    // Apply the java plugin to add support for Java
-    id 'java'
+apply plugin: 'java'
 
-    // Apply the application plugin to add support for building an application
-    id 'application'
-}
 
-// Define the main class for the application
-mainClassName = 'App'
 
 dependencies {
-    // This dependency is found on compile classpath of this component and consumers.
-    compile 'com.google.guava:guava:23.0'
-    compile files('lib/resources.jar')
+    compile files('./lib/resources.jar')
     // Use JUnit test framework
     testCompile 'junit:junit:4.12'
 }
 
+jar {
+    manifest {
+        attributes(
+            'Class-Path' : '../../lib/resources.jar',
+            'Main-Class':'edu.gatech.oad.antlab.pkg1.AntLabMain')
+
+    }
+    archiveName = 'AntLabMain.jar'
+}
+
 // In this section you declare where to find the dependencies of your project
 repositories {
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    mavenCentral()
+    flatDir {
+        dirs 'lib'
+    }
 }
